environments/local/opsboard/backend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: opsboard-backend
  namespace: opsboard

  labels:
    app: opsboard
    component: backend

spec:
  type: ClusterIP

  selector:
    app: opsboard
    component: backend

  ports:
    - name: http
      protocol: TCP
      port: 4000
      targetPort: http
