environments/local/opsboard/postgres-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: opsboard-postgres
  namespace: opsboard

  labels:
    app: opsboard
    component: postgres

spec:
  clusterIP: None

  selector:
    app: opsboard
    component: postgres

  ports:
    - name: postgres
      protocol: TCP
      port: 5432
      targetPort: postgres
